refactor(jdk): Using Java8 to support 1.8~1.21